# Meta

./: README.md  cas-management-org-chart-2025-07-01.md  changi-terminal-transfer-map.md  ops-contacts-note.md
samples/CameraAccess/: .gitignore  README.md  install_with_api.sh  settings.gradle.kts
samples/CameraAccess/app/: .gitignore  build.gradle.kts
samples/CameraAccess/app/src/main/: AndroidManifest.xml
samples/CameraAccess/app/src/main/cpp/: CMakeLists.txt  yuv_to_argb.cpp
samples/CameraAccess/app/src/main/java/com/meta/wearable/dat/externalsampleapps/cameraaccess/: MainActivity.kt
samples/CameraAccess/app/src/main/java/com/meta/wearable/dat/externalsampleapps/cameraaccess/stream/: NativeYuv.kt  PeopleCounter.kt  StreamUiState.kt  StreamViewModel.kt  YoloTfliteDetector.kt
samples/CameraAccess/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_glasses_foreground.xml  smart_glasses_icon_white.xml
samples/CameraAccess/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
samples/CameraAccess/app/src/main/res/values/: strings.xml
samples/CameraAccess/app/src/main/res/xml/: network_security_config.xml
samples/CameraAccess/dashboard/: README.md  airspace.html  aviationstack-flights.html  aviationstack.html  flights.html  gates.html  gates20.json  index.html  live-pov.html  lost-found.html  people-count.html  security-lanes.html  server.py  worldview.html
samples/CameraAccess/gradle/: libs.versions.toml
samples/CameraAccess/server/: package-lock.json  package.json  server.js  viewer.html
(+10 files in other folders)
